[package]
name = "h2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
http-body = "=1.0.0-rc.2"
hyper = { version = "1.0.0-rc.4", features = ["server", "http2"] }
pin-project-lite = "0.2.13"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = [
  "fs",
  "macros",
  "net",
  "rt",
  "signal",
  "sync",
  "time",
] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"

[dev-dependencies]
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["client", "http2"] }
