[package]
name = "h2d"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
bytes = "1.6.0"
event-listener = "5.0.0"
http-body = "1.0.0"
hyper = { version = "1.1.0", features = ["server", "http2"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
pin-project-lite = "0.2.13"
rustls = "0.23.0"
tokio = { version = "1.32.0", features = ["net", "rt", "sync", "time"] }
tokio-rustls = "0.26.0"
tracing = "0.1.37"

[dev-dependencies]
http = "1.0.0"
http-body-util = "0.1.0"
tokio = { version = "1.32.0", features = ["macros"] }
hyper = { version = "1.0.0", features = ["client", "http2"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
